[package]
authors = ['LootSolutions']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://github.com/LootSolutions/'
license = 'Apache-2.0'
name = 'royalty-nft'
repository = 'https://github.com/LootSolutions/loot-node/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
loot-nft= { path = "../nft/", default-features = false}
sp-arithmetic = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }


[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
pallet-balances = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-arithmetic/std',
    'sp-runtime/std',
    'loot-nft/std',
]
